--- a/app/templates/user_collect.html
+++ b/app/templates/user_collect.html
@@ -196,7 +196,7 @@
     <div class="container_12">
       
        <div id="content" class="grid_9">
-	      <h1 class="page_title">Product List</h1>
+	      <h1 class="page_title">收藏夹</h1>
 	      
 	      <div class="options">
 
@@ -246,9 +246,10 @@
 						 <div class="price_new">${{book['price']}}</div>
 					  </div>
 				   </div>
-				   <a href="#" class="obn"></a>
-				   <a href="#" class="like"></a>
-				   <a href="#" class="bay"></a>
+
+				   <a href="#" class="none"></a>
+				   <a href="{{url_for('book_collect_delete',book_id=book['id'])}}" class="obn"></a>
+				   <a href="{{url_for('book_cart',book_id=book['id'])}}" class="bay"></a>
 			    </div><!-- .cart -->
 		     </div><!-- .grid_3 -->
           {%endfor%}
