--- a/app/templates/user_shopping_cart.html
+++ b/app/templates/user_shopping_cart.html
@@ -196,16 +196,15 @@
   <section id="main" class="entire_width">
     <div class="container_12">
        <div class="grid_12">
-       <h1 class="page_title">Shopping Cart</h1>
+       <h1 class="page_title">购物车</h1>
 
        <table class="cart_product">
 	      <tr>
 		     <th class="images"></th>
-		     <th class="bg name">Product Name</th>
-		     <th class="edit"> </th>
-		     <th class="bg price">Unit Price</th>
-		     <th class="qty">Qty</th>
-		     <th class="bg subtotal">Subtotal</th>
+		     <th class="bg name">书名</th>
+		     <th class="bg price">单价</th>
+		     <th class="qty">数量</th>
+		     <th class="bg subtotal">总价</th>
 		     <th class="close"> </th>
 	      </tr>
           <form method='POST' action="/book/add_detail">
@@ -213,10 +212,9 @@
 	      <tr>
 		     <td class="images"><a href="product_page.html"><img src="images/product_6.png" alt="Product 6"></a></td>
 		     <td class="bg name">{{book["book_name"]}}<br/></td>
-		     <td class="edit"><a title="Edit" href="#">Edit</a></td>
 		     <td class="bg price">{{book["book_price"]}}</td>
-		     <td class="qty"><input type="text" name="" value="" placeholder="1000" /></td>
-		     <td class="bg subtotal">$750.00</td>
+		     <td class="qty"><input type="text" name="" value="" placeholder={{book["book_num"]}} /></td>
+		     <td class="bg subtotal">{{book["book_num"] * book["book_price"]}}</td>
 		     <td class="close"><a title="close" class="close" href="{{url_for('book_cart_delete',book_id =book["book_id"])}}" onclick="document.getElementById('thisform').submit()"></a></td>
 	      </tr>
           {%endfor%}
@@ -224,8 +222,8 @@
             
 	      <tr>
 		     <td colspan="7" class="cart_but">
-			    <button class="continue"><span>icon</span>Continue Shopping</button>
-			    <button type="submit"><span>icon</span>提交订单</button>
+
+			    <button type="submit">提交订单</button>
 		     </td>
 	      </tr>
           </form>
