--- a/app/templates/user_login.html
+++ b/app/templates/user_login.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="keywords" content="">
 
-  <title>Login</title>
+  <title>登陆</title>
 
   <link rel="shortcut icon" href="{{url_for('static',filename='favicon.ico')}}">
   <link href="{{url_for('static',filename='css/userstyle.css')}}" media="screen" rel="stylesheet" type="text/css">
@@ -75,38 +75,7 @@
 </head>
 <body>
   <div class="container_12">
-    <div id="top">
-      <div class="grid_3">
-        <div class="phone_top">
-          Call Us +777 (100) 1234
-        </div><!-- .phone_top -->
-      </div><!-- .grid_3 -->
-   
-      <div class="grid_6">
-        <div class="welcome">
-          Welcome visitor you can <a href="login.html">login</a> or <a href="login.html">create an account</a>.
-        </div><!-- .welcome -->
-      </div><!-- .grid_6 -->
-   
-      <div class="grid_3">
-        <div class="valuta">
-          <ul>
-            <li class="curent"><a href="#">$</a></li>
-            <li><a href="#">&#8364;</a></li>
-            <li><a href="#">&#163;</a></li>
-          </ul>
-        </div><!-- .valuta -->
-    
-        <div class="lang">
-          <ul>
-            <li class="curent"><a href="#">EN</a></li>
-            <li><a href="#">FR</a></li>
-            <li><a href="#">GM</a></li>
-          </ul>
-        </div><!-- .lang -->
-      </div><!-- .grid_3 -->
-    </div><!-- #top -->
-  
+
     <div class="clear"></div>
    
     <header id="branding">
@@ -119,54 +88,27 @@
       
       <div class="grid_3">
         <form class="search">
-          <input type="text" name="search" class="entry_form" value="" placeholder="Search entire store here..."/>
+          <input type="text" name="search" class="entry_form" value="" placeholder="输入查询关键字"/>
 	</form>
       </div><!-- .grid_3 -->
       
-      <div class="grid_6">
-        <ul id="cart_nav">
-          <li>
-            <a class="cart_li" href="#">Cart <span>$0.00</span></a>
-            <ul class="cart_cont">
-              <li class="no_border"><p>Recently added item(s)</p></li>
-              <li>
-                <a href="product_page.html" class="prev_cart"><div class="cart_vert"><img src="images/cart_img.png" alt="" title="" /></div></a>
-                <div class="cont_cart">
-                  <h4>Caldrea Linen and Room Spray</h4>
-                  <div class="price">1 x $399.00</div>
-                </div>
-                <a title="close" class="close" href="#"></a>
-                <div class="clear"></div>
-              </li>
-              
-              <li>
-                <a href="product_page.html" class="prev_cart"><div class="cart_vert"><img src="images/produkt_slid1.png" alt="" title="" /></div></a>
-                <div class="cont_cart">
-                  <h4>Caldrea Linen and Room Spray</h4>
-                  <div class="price">1 x $399.00</div>
-                </div>
-                <a title="close" class="close" href="#"></a>
-                <div class="clear"></div>
-              </li>
-	      <li class="no_border">
-		<a href="shopping_cart.html" class="view_cart">View shopping cart</a>
-		<a href="checkout.html" class="checkout">Procced to Checkout</a>
-	      </li>
-            </ul>
-          </li>
-        </ul>
-        
+            <div class="grid_6">
+
         <nav class="private">
           <ul>
-            <li><a href="#">My Account</a></li>
-		<li class="separator">|</li>
-            <li><a href="#">My Wishlist</a></li>
-		<li class="separator">|</li>
-            <li><a href="login.html">Log In</a></li>
-		<li class="separator">|</li>
-            <li><a href="login.html">Sign Up</a></li>
+            <li><a href="#">我的账户</a></li>
+        <li class="separator">|</li>
+            <li><a href="{{url_for('collect')}}">收藏夹</a></li>
+        <li class="separator">|</li>
+            {% if current_user.is_authenticated%}
+                <li><a href="#">{{current_user.user_name}}</a></li>
+            {%else%}
+                <li><a href="{{url_for('login')}}">登陆</a></li>
+            {%endif%}
+        <li class="separator">|</li>
+            <li><a href="{{url_for('logout')}}">退出</a></li>
           </ul>
-        </nav><!-- .private -->        
+        </nav><!-- .private -->
       </div><!-- .grid_6 -->
     </header><!-- #branding -->
   </div><!-- .container_12 -->
@@ -182,7 +124,7 @@
             <li><a href="{{url_for('book_list')}}">图书</a></li>
             <li><a href="{{url_for('activity_list')}}">活动</a></li>
             <li>
-              <a href="catalog_grid.html">用户</a>
+              <a href="{{url_for('user_home')}}">用户</a>
               <ul class="sub">
                 <li><a href="{{url_for('user_home')}}">主页</a></li>
                 <li><a href=" {{url_for('cart')}}">购物车</a></li>
@@ -204,21 +146,21 @@
     <div class="container_12">      
        <div id="content">
 		<div class="grid_12">
-			<h1 class="page_title">Login or Create an Account</h1>
+			<h1 class="page_title">登陆</h1>
 		</div><!-- .grid_12 -->
 		
 		<div class="grid_6 new_customers">
-			<h2>New Customers</h2>
-			<p>By creating an account with our store, you will be able to move through the checkout process faster, store multiple shipping addresses, view and track your orders in your account and more.</p>
+			<h2>新用户</h2>
+			<p>通过在我们的书店创建一个账号，您将能够参与我们的线下活动，存储您的购书信息，查看和跟踪您的订单在您的帐户和更多。</p>
 			<div class="clear"></div>
-			<button class="account">Create An Account</button>
+			<a href="{{url_for('register')}}"><button class="account">注册账号</button></a>
                 </div><!-- .grid_6 -->
 		
 		<div class="grid_6">
 			<form class="registed" method="post">
-				<h2>Registed Customers</h2>
+				<h2>用户登陆</h2>
 							
-				<p>If you have an account with us, please log in.</p>
+				<p>请登陆您的账号</p>
 							
 				<div class="email">
 					<strong>用户名:</strong><sup class="surely">*</sup><br/>
@@ -228,16 +170,15 @@
 				<div class="password">
 					<strong>密码:</strong><sup class="surely">*</sup><br/>
 					<input type="text" name="password" class="" value="" />
-					<a class="forgot" href="#">Forgot Your Password?</a>
 				</div><!-- .password -->
 				
 				<div class="remember">
 					<input class="niceCheck" type="checkbox" name="Remember_password" />
-					<span class="rem">Remember password</span>
+					<span class="rem">记住密码</span>
 				</div><!-- .remember -->
 				
 				<div class="submit">										
-					<input type="submit" value="Login" />
+					<input type="submit" value="登陆" />
 					<sup class="surely">*</sup><span>Required Field</span>
 				</div><!-- .submit -->
 			</form><!-- .registed -->
