--- a/app/templates/user_404.html
+++ b/app/templates/user_404.html
@@ -181,7 +181,7 @@
             <li><a href="{{url_for('book_list')}}">图书</a></li>
             <li><a href="{{url_for('activity_list')}}">活动</a></li>
             <li>
-              <a href="catalog_grid.html">用户</a>
+              <a href="{{url_for('user_home')}}">用户</a>
               <ul class="sub">
                 <li><a href="{{url_for('user_home')}}">主页</a></li>
                 <li><a href=" {{url_for('cart')}}">购物车</a></li>
