--- a/app/templates/user_checkout.html
+++ b/app/templates/user_checkout.html
@@ -75,37 +75,6 @@
 </head>
 <body>
   <div class="container_12">
-    <div id="top">
-      <div class="grid_3">
-        <div class="phone_top">
-          Call Us +777 (100) 1234
-        </div><!-- .phone_top -->
-      </div><!-- .grid_3 -->
-   
-      <div class="grid_6">
-        <div class="welcome">
-          Welcome visitor you can <a href="login.html">login</a> or <a href="login.html">create an account</a>.
-        </div><!-- .welcome -->
-      </div><!-- .grid_6 -->
-   
-      <div class="grid_3">
-        <div class="valuta">
-          <ul>
-            <li class="curent"><a href="#">$</a></li>
-            <li><a href="#">&#8364;</a></li>
-            <li><a href="#">&#163;</a></li>
-          </ul>
-        </div><!-- .valuta -->
-    
-        <div class="lang">
-          <ul>
-            <li class="curent"><a href="#">EN</a></li>
-            <li><a href="#">FR</a></li>
-            <li><a href="#">GM</a></li>
-          </ul>
-        </div><!-- .lang -->
-      </div><!-- .grid_3 -->
-    </div><!-- #top -->
   
     <div class="clear"></div>
    
@@ -123,50 +92,23 @@
 	</form>
       </div><!-- .grid_3 -->
       
-      <div class="grid_6">
-        <ul id="cart_nav">
-          <li>
-            <a class="cart_li" href="#">Cart <span>$0.00</span></a>
-            <ul class="cart_cont">
-              <li class="no_border"><p>Recently added item(s)</p></li>
-              <li>
-                <a href="product_page.html" class="prev_cart"><div class="cart_vert"><img src="images/cart_img.png" alt="" title="" /></div></a>
-                <div class="cont_cart">
-                  <h4>Caldrea Linen and Room Spray</h4>
-                  <div class="price">1 x $399.00</div>
-                </div>
-                <a title="close" class="close" href="#"></a>
-                <div class="clear"></div>
-              </li>
-              
-              <li>
-                <a href="product_page.html" class="prev_cart"><div class="cart_vert"><img src="images/produkt_slid1.png" alt="" title="" /></div></a>
-                <div class="cont_cart">
-                  <h4>Caldrea Linen and Room Spray</h4>
-                  <div class="price">1 x $399.00</div>
-                </div>
-                <a title="close" class="close" href="#"></a>
-                <div class="clear"></div>
-              </li>
-	      <li class="no_border">
-		<a href="shopping_cart.html" class="view_cart">View shopping cart</a>
-		<a href="checkout.html" class="checkout">Procced to Checkout</a>
-	      </li>
-            </ul>
-          </li>
-        </ul>
-        
+            <div class="grid_6">
+
         <nav class="private">
           <ul>
-            <li><a href="#">My Account</a></li>
-		<li class="separator">|</li>
-            <li><a href="#">My Wishlist</a></li>
-		<li class="separator">|</li>
-            <li><a href="login.html">Log In</a></li>
-		<li class="separator">|</li>
-            <li><a href="login.html">Sign Up</a></li>
+            <li><a href="#">我的账户</a></li>
+        <li class="separator">|</li>
+            <li><a href="{{url_for('collect')}}">收藏夹</a></li>
+        <li class="separator">|</li>
+            {% if current_user.is_authenticated%}
+                <li><a href="#">{{current_user.user_name}}</a></li>
+            {%else%}
+                <li><a href="{{url_for('login')}}">登陆</a></li>
+            {%endif%}
+        <li class="separator">|</li>
+            <li><a href="{{url_for('logout')}}">退出</a></li>
           </ul>
-        </nav><!-- .private -->        
+        </nav><!-- .private -->
       </div><!-- .grid_6 -->
     </header><!-- #branding -->
   </div><!-- .container_12 -->
@@ -179,25 +121,25 @@
         <nav class="primary">
           <ul>
             <li class="curent"><a href="index.html">Home</a></li>
-            <li><a href="catalog_grid.html">Solids</a></li>
-            <li><a href="catalog_grid.html">Liquids</a></li>
+            <li><a href="{{url_for('user_home')}}">Solids</a></li>
+            <li><a href="{{url_for('user_home')}}">Liquids</a></li>
             <li>
-              <a href="catalog_grid.html">Spray</a>
+              <a href="{{url_for('user_home')}}">Spray</a>
               <ul class="sub">
-                <li><a href="catalog_grid.html">For home</a></li>
-                <li><a href="catalog_grid.html">For Garden</a></li>
-                <li><a href="catalog_grid.html">For Car</a></li>
-                <li><a href="catalog_grid.html">Other spray</a></li>
+                <li><a href="{{url_for('user_home')}}">For home</a></li>
+                <li><a href="{{url_for('user_home')}}">For Garden</a></li>
+                <li><a href="{{url_for('user_home')}}">For Car</a></li>
+                <li><a href="{{url_for('user_home')}}">Other spray</a></li>
               </ul>
             </li>
-            <li><a href="catalog_grid.html">Electric</a></li>
-            <li><a href="catalog_grid.html">For cars</a></li>
+            <li><a href="{{url_for('user_home')}}">Electric</a></li>
+            <li><a href="{{url_for('user_home')}}">For cars</a></li>
 	    <li>
               <a href="#">All pages</a>
               <ul class="sub">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="text_page.html">Typography and basic styles</a></li>
-		<li><a href="catalog_grid.html">Catalog (grid view)</a></li>
+		<li><a href="{{url_for('user_home')}}">Catalog (grid view)</a></li>
 		<li><a href="catalog_list.html">Catalog (list type view)</a></li>
 		<li><a href="product_page.html">Product view</a></li>
 		<li><a href="shopping_cart.html">Shoping cart</a></li>
