--- a/app/templates/user_index.html
+++ b/app/templates/user_index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="keywords" content="">
 
-  <title>Home</title>
+  <title>主页</title>
 
   <link rel="shortcut icon" href="{{url_for('static',filename='favicon.ico')}}">
   <link href="{{url_for('static',filename='css/userstyle.css')}}" media="screen" rel="stylesheet" type="text/css">
@@ -72,42 +72,11 @@
 
       <div class="grid_3">
         <form class="search">
-          <input type="text" name="search" class="entry_form" value="" placeholder="Search entire store here..."/>
+          <input type="text" name="search" class="entry_form" value="" placeholder="输入查询关键字"/>
     </form>
       </div><!-- .grid_3 -->
 
       <div class="grid_6">
-        <ul id="cart_nav">
-          <li>
-            <a class="cart_li" href="#">购物车 <span>$0.00</span></a>
-            <ul class="cart_cont">
-              <li class="no_border"><p>购物车商品</p></li>
-              <li>
-                <a href="product_page.html" class="prev_cart"><div class="cart_vert"><img src="images/cart_img.png" alt="" title="" /></div></a>
-                <div class="cont_cart">
-                  <h4>Caldrea Linen and Room Spray</h4>
-                  <div class="price">1 x $399.00</div>
-                </div>
-                <a title="close" class="close" href="#"></a>
-                <div class="clear"></div>
-              </li>
-              
-              <li>
-                <a href="product_page.html" class="prev_cart"><div class="cart_vert"><img src="images/produkt_slid1.png" alt="" title="" /></div></a>
-                <div class="cont_cart">
-                  <h4>Caldrea Linen and Room Spray</h4>
-                  <div class="price">1 x $399.00</div>
-                </div>
-                <a title="close" class="close" href="#"></a>
-                <div class="clear"></div>
-              </li>
-          <li class="no_border">
-        <a href="shopping_cart.html" class="view_cart">View shopping cart</a>
-        <a href="checkout.html" class="checkout">Procced to Checkout</a>
-          </li>
-            </ul>
-          </li>
-        </ul>
 
         <nav class="private">
           <ul>
@@ -139,7 +108,7 @@
             <li><a href="{{url_for('book_list')}}">图书</a></li>
             <li><a href="{{url_for('activity_list')}}">活动</a></li>
             <li>
-              <a href="catalog_grid.html">用户</a>
+              <a href="{{url_for('user_home')}}">用户</a>
               <ul class="sub">
                 <li><a href="{{url_for('user_home')}}">主页</a></li>
                 <li><a href=" {{url_for('cart')}}">购物车</a></li>
@@ -162,33 +131,18 @@
         <div class="slidprev"><span>Prev</span></div>
         <div class="slidnext"><span>Next</span></div>
         <div id="slider">
+        {%for newactivity in new_activity%}
           <div id="slide1">
-            <img src="{{url_for('static',filename='images/content/slide1.jpg')}}" alt="" title="" />
+            <a href="{{url_for('activity_detail',activity_id=newactivity['id'])}}">
+                <img src="{{url_for('static',filename='images/pao.jpg')}}" alt="" title="" />
+            </a>
             <div class="slid_text">
-              <h3 class="slid_title"><span>Breeze Theme</span></h3>
-              <p><span>Breeze is the 14 stylish HTML templates,</span></p>
-              <p><span>which will helps you boost sales</span></p>
-              <p><span>and receive good feedback from your clients.</span></p>
+              <h3 class="slid_title"><span>{{newactivity['name']}}</span></h3>
+              <p><span>{{newactivity['guest']}}</span></p>
+              <p>{{newactivity['describe']}}</p>
             </div>
           </div>
-
-          <div id="slide2">
-            <img src="{{url_for('static',filename='images/content/slide2.jpg')}}" alt="" title="" />
-            <div class="slid_text">
-              <h3 class="slid_title"><span>Flexibility</span></h3>
-              <p><span>Every product, which you are selling,</span></p>
-              <p><span>will look great with Breeze theme.</span></p>
-            </div>
-          </div>
-
-          <div id="slide3">
-            <img src="{{url_for('static',filename='images/content/slide3.jpg')}}" alt="" title="" />
-            <div class="slid_text">
-              <h3 class="slid_title"><span>Accuracy and Easiness</span></h3>
-              <p><span>Breeze design is mere and accurate,</span></p>
-              <p><span>so it will satisfy everybody.</span></p>
-            </div>
-          </div>
+        {%endfor%}
         </div><!-- .slider -->
         <div id="myController">
           <div class="control"><span>1</span></div>
@@ -199,24 +153,6 @@
 
     </div><!-- .grid_12 -->
   </div><!-- .container_12 -->
-  {% for message in get_flashed_messages('ok') %}
-    <div class="alert alert-warning">
-        <button type="button" class="close" data-dismiss="alert">&times;</button>
-        {{ message }}
-    </div>
-  {% endfor %}
-  {% for message in get_flashed_messages('fail') %}
-    <div class="alert alert-warning">
-        <button type="button" class="close" data-dismiss="alert">&times;</button>
-        {{ message }}
-    </div>
-  {% endfor %}
-  {% for message in get_flashed_messages('again') %}
-    <div class="alert alert-warning">
-        <button type="button" class="close" data-dismiss="alert">&times;</button>
-        {{ message }}
-    </div>
-  {% endfor %}
   <div class="copyrights">Collect from <a href="http://www.moobnn.com/"  title="网站模板">网站模板</a></div>
   <div class="clear"></div>
 
@@ -232,7 +168,7 @@
       <div class="carousel">
         <div class="c_header">
           <div class="grid_10">
-            <h2>销量最高</h2>
+            <h2>最新图书</h2>
           </div><!-- .grid_10 -->
 
           <div class="grid_2">
@@ -244,107 +180,27 @@
         <div class="list_carousel">
 
         <ul id="list_product" class="list_product">
-          <li class="">
-            <div class="grid_3 product">
-              <img class="sale" src="{{url_for('static',filename='images/sale.png')}}" alt="Sale"/>
-              <div class="prev">
-                <a href="product_page.html"><img src="{{url_for('static',filename='images/product_1.png')}}" alt="" title="" /></a>
-              </div><!-- .prev -->
-              <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-              <div class="cart">
-                <div class="price">
-                <div class="vert">
-                  <div class="price_new">$550.00</div>
-                  <div class="price_old">$725.00</div>
-                </div>
-                </div>
-                <a href="#" class="obn"></a>
-                <a href="#" class="like"></a>
-                <a href="#" class="bay"></a>
-              </div><!-- .cart -->
-            </div><!-- .grid_3 -->
-          </li>
-
-          <li class="">
-            <div class="grid_3 product">
-              <img class="sale" src="images/sale.png" alt="Sale"/>
-              <div class="prev">
-                <a href="product_page.html"><img src="{{url_for('static',filename='images/product_2.png')}}" alt="" title="" /></a>
-              </div><!-- .prev -->
-              <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-              <div class="cart">
-                <div class="price">
-                <div class="vert">
-                  <div class="price_new">$550.00</div>
-                  <div class="price_old">$725.00</div>
-                </div>
-                </div>
-                <a href="#" class="obn"></a>
-                <a href="#" class="like"></a>
-                <a href="#" class="bay"></a>
-              </div><!-- .cart -->
-            </div><!-- .grid_3 -->
-          </li>
-
+        {%for newbook in new_book%}
           <li class="">
             <div class="grid_3 product">
               <div class="prev">
-                <a href="product_page.html"><img src="{{url_for('static',filename='images/product_3.png')}}" alt="" title="" /></a>
+                <a href="{{url_for('book_detail',book_id=newbook['id'])}}"><img src="{{url_for('static',filename=newbook['image'])}}" alt="" title="" /></a>
               </div><!-- .prev -->
-              <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
+              <h3 class="title">{{newbook['name']}}</h3>
               <div class="cart">
                 <div class="price">
                 <div class="vert">
-                  <div class="price_new">$550.00</div>
+                  <div class="price_new">{{newbook['price']}}</div>
                 </div>
                 </div>
-                <a href="#" class="obn"></a>
-                <a href="#" class="like"></a>
-                <a href="#" class="bay"></a>
+                <a href="{{url_for('book_cart',book_id=newbook['id'])}}" class="bay"></a>
+				<a href="#" class="none"></a>
+				<a href="{{url_for('book_collect',book_id=newbook['id'])}}" class="like"></a>
               </div><!-- .cart -->
             </div><!-- .grid_3 -->
           </li>
-
-          <li class="">
-            <div class="grid_3 product">
-              <img class="sale" src="images/sale.png" alt="Sale"/>
-              <div class="prev">
-                <a href="product_page.html"><img src="{{url_for('static',filename='images/product_4.png')}}" alt="" title="" /></a>
-              </div><!-- .prev -->
-              <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-              <div class="cart">
-                <div class="price">
-                <div class="vert">
-                  <div class="price_new">$550.00</div>
-                  <div class="price_old">$725.00</div>
-                </div>
-                </div>
-                <a href="#" class="obn"></a>
-                <a href="#" class="like"></a>
-                <a href="#" class="bay"></a>
-              </div><!-- .cart -->
-            </div><!-- .grid_3 -->
-          </li>
-
-          <li class="">
-            <div class="grid_3 product">
-              <div class="prev">
-                <a href="product_page.html"><img src="images/product_8.png" alt="" title="" /></a>
-              </div><!-- .prev -->
-              <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-              <div class="cart">
-                <div class="price">
-                <div class="vert">
-                  <div class="price_new">$550.00</div>
-                  <div class="price_old">$725.00</div>
-                </div>
-                </div>
-                <a href="#" class="obn"></a>
-                <a href="#" class="like"></a>
-                <a href="#" class="bay"></a>
-              </div><!-- .cart -->
-            </div><!-- .grid_3 -->
-          </li>
+        {%endfor%}
+          
 
         </ul><!-- #list_product -->
         </div><!-- .list_carousel -->
@@ -353,7 +209,7 @@
       <div class="carousel">
         <div class="c_header">
           <div class="grid_10">
-            <h2>收藏最多</h2>
+            <h2>销量最高</h2>
           </div><!-- .grid_10 -->
 
           <div class="grid_2">
@@ -364,160 +220,29 @@
 
         <div class="list_carousel">
         <ul id="list_product2" class="list_product">
-          <li class="">
-            <div class="grid_3 product">
-              <img class="sale" src="images/sale.png" alt="Sale"/>
-              <div class="prev">
-                <a href="product_page.html"><img src="images/product_5.png" alt="" title="" /></a>
-              </div><!-- .prev -->
-              <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-              <div class="cart">
-                <div class="price">
-                <div class="vert">
-                  <div class="price_new">$550.00</div>
-                  <div class="price_old">$725.00</div>
-                </div>
-                </div>
-                <a href="#" class="obn"></a>
-                <a href="#" class="like"></a>
-                <a href="#" class="bay"></a>
-              </div><!-- .cart -->
-            </div><!-- .grid_3 -->
-          </li>
-
-          <li class="">
-            <div class="grid_3 product">
-              <img class="sale" src="images/sale.png" alt="Sale"/>
-              <div class="prev">
-                <a href="product_page.html"><img src="images/product_6.png" alt="" title="" /></a>
-              </div><!-- .prev -->
-              <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-              <div class="cart">
-                <div class="price">
-                <div class="vert">
-                  <div class="price_new">$550.00</div>
-                  <div class="price_old">$725.00</div>
-                </div>
-                </div>
-                <a href="#" class="obn"></a>
-                <a href="#" class="like"></a>
-                <a href="#" class="bay"></a>
-              </div><!-- .cart -->
-            </div><!-- .grid_3 -->
-          </li>
-
+        {%for bassSale in baseSale_book%}
           <li class="">
             <div class="grid_3 product">
               <div class="prev">
-                <a href="product_page.html"><img src="images/product_7.png" alt="" title="" /></a>
+                <a href="{{url_for('book_detail',book_id=bassSale['id'])}}"><img src="{{url_for('static',filename=bassSale['image'])}}" alt="" title="" /></a>
               </div><!-- .prev -->
-              <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
+              <h3 class="title">{{bassSale['name']}}</h3>
               <div class="cart">
                 <div class="price">
                 <div class="vert">
-                  <div class="price_new">$550.00</div>
+                  <div class="price_new">{{bassSale['price']}}</div>
                 </div>
                 </div>
-                <a href="#" class="obn"></a>
-                <a href="#" class="like"></a>
-                <a href="#" class="bay"></a>
+                <a href="{{url_for('book_cart',book_id=bassSale['id'])}}" class="bay"></a>
+				<a href="#" class="none"></a>
+				<a href="{{url_for('book_collect',book_id=bassSale['id'])}}" class="like"></a>
               </div><!-- .cart -->
             </div><!-- .grid_3 -->
           </li>
-
-          <li class="">
-            <div class="grid_3 product">
-              <img class="sale" src="images/sale.png" alt="Sale"/>
-              <div class="prev">
-                <a href="product_page.html"><img src="images/produkt_slid1.png" alt="" title="" /></a>
-              </div><!-- .prev -->
-              <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-              <div class="cart">
-                <div class="price">
-                <div class="vert">
-                  <div class="price_new">$550.00</div>
-                  <div class="price_old">$725.00</div>
-                </div>
-                </div>
-                <a href="#" class="obn"></a>
-                <a href="#" class="like"></a>
-                <a href="#" class="bay"></a>
-              </div><!-- .cart -->
-            </div><!-- .grid_3 -->
-          </li>
-
-          <li class="">
-            <div class="grid_3 product">
-              <div class="prev">
-                <a href="product_page.html"><img src="images/product_9.png" alt="" title="" /></a>
-              </div><!-- .prev -->
-              <h3 class="title">Febreze Air Effects New Zealand Springs</h3>
-              <div class="cart">
-                <div class="price">
-                <div class="vert">
-                  <div class="price_new">$550.00</div>
-                  <div class="price_old">$725.00</div>
-                </div>
-                </div>
-                <a href="#" class="obn"></a>
-                <a href="#" class="like"></a>
-                <a href="#" class="bay"></a>
-              </div><!-- .cart -->
-            </div><!-- .grid_3 -->
-          </li>
-
+        {%endfor%}
         </ul><!-- #list_product2 -->
         </div><!-- .list_carousel -->
       </div><!-- .carousel -->
-
-      <div id="content_bottom">
-        <div class="grid_4">
-          <div class="bottom_block about_as">
-            <h3>About Us</h3>
-            <p>A block of text is a stack of line boxes. In the case of 'left', 'right' and 'center', this property specifies how the inline-level boxes within each line box align with respect to the line box's </p>
-            <p>Alignment is not with respect to the viewport. In the case of 'justify', this property specifies that the inline-level boxes are to be made flush with both sides of the line box if possible.</p>
-            <p>by expanding or contracting the contents of inline boxes, else aligned as for the initial value.</p>
-          </div><!-- .about_as -->
-        </div><!-- .grid_4 -->
-
-        <div class="grid_4">
-          <div class="bottom_block news">
-            <h3>News</h3>
-            <ul>
-              <li>
-                <time datetime="2012-03-03">3 january 2012</time>
-                <a href="#">A block of text is a stack of line boxes. In the case of 'left', 'right' and 'center', this property specifies</a>
-              </li>
-
-              <li>
-                <time datetime="2012-02-03">2 january 2012</time>
-                <a href="#">A block of text is a stack of line boxes. In the case of 'left', 'right' and 'center', this property specifies</a>
-              </li>
-
-              <li>
-                <time datetime="2012-01-03">1 january 2012</time>
-                <a href="#">A block of text is a stack of line boxes. In the case of 'left', 'right' and 'center', this property specifies how the inline-level boxes within each line</a>
-              </li>
-            </ul>
-          </div><!-- .news -->
-        </div><!-- .grid_4 -->
-
-        <div class="grid_4">
-          <div class="bottom_block newsletter">
-            <h3>Newsletter</h3>
-            <p>Cursus in dapibus ultrices velit fusce. Felis lacus erat. Fermentum parturient lacus tristique habitant nullam morbi et odio nibh mus dictum tellus erat.</p>
-            <form class="letter_form">
-              <input type="email" name="newsletter" class="l_form" value="" placeholder="Enter your email address..."/>
-          <input type="submit" id="submit" value="" />
-        </form>
-            <div class="lettel_description">
-              Vel lobortis gravida. Cursus in dapibus ultrices velit fusce. Felis lacus erat.
-            </div><!-- .lettel_description -->
-          </div><!-- .newsletter -->
-        </div><!-- .grid_4 -->
-
-        <div class="clear"></div>
-      </div><!-- #content_bottom -->
       <div class="clear"></div>
 
     </div><!-- .container_12 -->
